--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,7 +48,11 @@ nav {
     color: #fff;
 }
 
-nav, a {
+a{
+    text-decoration: none;
+}
+
+nav a {
     color: #fff;
     text-decoration: none;
     font-weight: 600;
