--- a/views/rentSuccess.ejs
+++ b/views/rentSuccess.ejs
@@ -9,10 +9,9 @@
 <body>
     <nav>
         <a href="/home/<%=user.id%>">Book Club</a>
-        <span>
-            <%=user.username%>
-        </span>
+        <a href="/profile/<%=user.id%>"><%=user.username%></a>
         <a href="/mybooks/<%=user.id%>">My Books</a>
+        <a href="/logout">Log Out</a>
     </nav>
     <main>
         <h1>Book Rented Successfully</h1>
