--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="/home/<%=user.id%>">Book Club</a>
-        <a href="/profile/<%=user.id%>"><%=user.username%></a>
-        <a href="/mybooks/<%=user.id%>">My Books</a>
+        <a href="/home">Book Club</a>
+        <a href="/profile"><%=user.username%></a>
+        <a href="/mybooks">My Books</a>
         <a href="/logout">Log Out</a>
     </nav>
     <main>
@@ -25,7 +25,7 @@
                     <p class="muted-block">Publisher: <%=book.bookPublisher%></p>
                     <p><strong>Price:</strong> ₹<%=book.bookPrice%></p>
                     <div class="actions">
-                        <a class="btn" href="/mybooks/return/<%=user._id%>/<%=book._id%>">Return</a>
+                        <a class="btn" href="/mybooks/return/<%=book._id%>">Return</a>
                     </div>
                 </div>
             <% } %>
