--- a/views/recharge.ejs
+++ b/views/recharge.ejs
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recharge - <%=user.username%>
     </title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
     <nav>
-        <a href="/home/<%=user.id%>">Book Club</a>
-        <a href="/profile/<%=user.id%>"><%=user.username%></a>
-        <a href="/mybooks/<%=user.id%>">My Books</a>
+        <a href="/home">Book Club</a>
+        <a href="/profile"><%=user.username%></a>
+        <a href="/mybooks">My Books</a>
         <a href="/logout">Log Out</a>
     </nav>
 
     <fieldset>
-        <form action="/recharge/<%=user.id%>" method="post">
+        <% if (err) { %>
+                <p class="error"><%=err%></p>
+        <% } %>
+        <form action="/recharge" method="post">
             Amount: <input type="number" name="credit" id="credit" required>
             <button type="submit">Recharge</button>
         </form>
