--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - <%=user.username%></title>
+    <title>Checkout - <%=user.username%>
+    </title>
     <link rel="stylesheet" href="/css/index.css">
 </head>
+
 <body>
     <nav>
         <a href="/home">Book Club</a>
-        <a href="/profile"><%=user.username%></a>
+        <a href="/profile">
+            <%=user.username%>
+        </a>
         <a href="/mybooks">My Books</a>
         <a href="/logout">Log Out</a>
     </nav>
     <h1>Checkout</h1>
     <fieldset>
-        <p>Item Name: <span><%=book.bookName%></span></p>
-        <p>Price: <span><%=book.bookPrice%> credits</span></p>
-        <a href="/checkout/<%=book.id%>">Pay <%=book.bookPrice%> credits</a>
+        <p>Item Name: <span>
+                <%=book.bookName%>
+            </span></p>
+        <p>Price: <span>
+                <%=book.bookPrice%> credits
+            </span></p>
+        <a class='btn' href="/checkout/<%=book.id%>">Pay <%=book.bookPrice%> credits</a>
     </fieldset>
+
+    <script>
+        window.addEventListener("pageshow", (event) => {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        });
+    </script>
+
 </body>
+
 </html>
