--- a/views/recharge.ejs
+++ b/views/recharge.ejs
@@ -12,21 +12,35 @@
 <body>
     <nav>
         <a href="/home">Book Club</a>
-        <a href="/profile"><%=user.username%></a>
+        <a href="/profile">
+            <%=user.username%>
+        </a>
         <a href="/mybooks">My Books</a>
         <a href="/logout">Log Out</a>
     </nav>
 
     <fieldset>
         <% if (err) { %>
-                <p class="error"><%=err%></p>
-        <% } %>
-        <form action="/recharge" method="post">
-            Amount: <input type="number" name="credit" id="credit" required>
-            <button type="submit">Recharge</button>
-        </form>
-        
+            <p class="error">
+                <%=err%>
+            </p>
+            <% } %>
+                <form action="/recharge" method="post">
+                    Amount: <input type="number" name="credit" id="credit" required>
+                    <button type="submit">Recharge</button>
+                </form>
+
     </fieldset>
+
+    <script>
+        window.addEventListener("pageshow", (event) => {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        });
+    </script>
+
 </body>
+
 
 </html>
