--- a/views/returnSuccess.ejs
+++ b/views/returnSuccess.ejs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Rent Success</title>
     <link rel="stylesheet" href="/css/index.css">
 </head>
+
 <body>
     <nav>
         <a href="/home">Book Club</a>
-        <a href="/profile"><%=user.username%></a>
+        <a href="/profile">
+            <%=user.username%>
+        </a>
         <a href="/mybooks">My Books</a>
         <a href="/logout">Log Out</a>
     </nav>
@@ -17,17 +21,35 @@
         <h1>Book Returned Successfully</h1>
         <h3>Book Details</h3>
         <div class="card">
-            <p><strong>Username:</strong> <%=user.username%></p>
-            <p><strong>Book Name:</strong> <%=book.bookName%></p>
-            <p><strong>Author Name:</strong> <%=book.bookAuthor%></p>
-            <p><strong>Publisher Name:</strong> <%=book.bookPublisher%></p>
-            <p><strong>Book Price:</strong> ₹<%=book.bookPrice%></p>
-            <p><strong>Your 90% Credits have been refunded!</strong></p>
+            <p><strong>Username:</strong>
+                <%=user.username%>
+            </p>
+            <p><strong>Book Name:</strong>
+                <%=book.bookName%>
+            </p>
+            <p><strong>Author Name:</strong>
+                <%=book.bookAuthor%>
+            </p>
+            <p><strong>Publisher Name:</strong>
+                <%=book.bookPublisher%>
+            </p>
+            <p><strong>Book Price:</strong> ₹<%=book.bookPrice%>
+            </p>
+            <!-- <p><strong>Your 90% Credits have been refunded!</strong></p> -->
             <div class="actions">
                 <a class="btn" href="/home">Back to Home</a>
                 <a class="btn secondary" href="/mybooks">View My Books</a>
             </div>
         </div>
     </main>
+    <script>
+        window.addEventListener("pageshow", (event) => {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        });
+    </script>
+
 </body>
+
 </html>
