removed edit book button for usertype user and some bug fixing

--- a/views/allusers.ejs
+++ b/views/allusers.ejs
@@ -50,7 +50,7 @@
                                             <% } %> -->
                                                 <p><strong>Name: </strong> <%=usr.username%></p>
                                                 <p><strong>Email: </strong> <%=usr.usermail%></p>
-                                                <p><strong>Wallet: </strong> <%=usr.userwallet%></p>
+                                                <p><strong>Wallet: </strong> <%=usr.userwallet%> credits</p>
                                                 <!-- <p><strong>Books Issued: </strong> <%=usr.bookIssued%></p> -->
                                                 <p><strong>User Type: </strong> <%=usr.usertype%></p>
                                                 <% if (user.usertype=='admin' ) { %>
